--- a/package.json
+++ b/package.json
@@ -21,23 +21,45 @@
     "benchmark:tokens": "node tests/benchmarks/token-optimization-benchmark.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.2.0",
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "@types/cors": "^2.8.18",
+    "@types/inquirer": "^9.0.8",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.6.7",
+    "chalk": "^5.4.1",
+    "commander": "^14.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "marked": "^15.0.4"
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "figlet": "^1.8.1",
+    "helmet": "^8.1.0",
+    "inquirer": "^12.6.1",
+    "marked": "^15.0.4",
+    "ora": "^8.2.0",
+    "table": "^6.9.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
+    "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.21",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "better-docs": "^2.7.3",
     "concurrently": "^9.1.2",
+    "eslint": "^9.27.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock": "^29.7.0",
     "jsdoc": "^4.0.2",
     "supertest": "^6.3.4",
-    "taffydb": "^2.7.3"
+    "taffydb": "^2.7.3",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "repository": {
     "type": "git",
