feat: add project infrastructure and   development commands
  - Add Claude command system with 8
  standardized commands for analysis,
  review, and development workflow
  - Implement repository review system with
  6 specialized agents for parallel analysis
  - Create project structure with codex,
  specifications, and reference materials
  - Add comprehensive findings schema and
  report templates for standardized outputs
  - Install @anthropic-ai/claude-code
  dependency for AI-assisted development

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.18",
     "@types/inquirer": "^9.0.8",
     "@types/uuid": "^10.0.0",
+    "@anthropic-ai/claude-code": "^1.0.17",
     "axios": "^1.6.7",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
